--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@codemirror/basic-setup": "^0.19.0",
+    "@codemirror/lang-javascript": "^0.19.2",
+    "@codemirror/lang-python": "^0.19.2",
+    "@codemirror/state": "^0.19.2",
+    "@codemirror/view": "^0.19.9",
     "@ngneat/svg-generator": "^3.2.1",
     "@ngneat/svg-icon": "^3.2.0",
     "@ngneat/tailwind": "7.0.3",
