ng add @datorama/akita

--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@codemirror/lang-python": "^0.19.2",
     "@codemirror/state": "^0.19.2",
     "@codemirror/view": "^0.19.9",
+    "@datorama/akita": "^6.0.0",
+    "@datorama/akita-ng-entity-service": "^6.0.0",
+    "@datorama/akita-ng-router-store": "^6.0.0",
     "@ngneat/dialog": "1.6.0",
     "@ngneat/svg-generator": "^3.2.1",
     "@ngneat/svg-icon": "^3.2.0",
     "@ngneat/tailwind": "7.0.3",
     "@nrwl/angular": "12.9.0",
+    "akita-ng-fire": "^3.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -42,6 +46,7 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
+    "@datorama/akita-ngdevtools": "^6.0.0",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
