--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nocode/auth": ["libs/auth/src/index.ts"],
       "@nocode/ui": ["libs/ui/src/index.ts"],
-      "@nocode/vendor": ["libs/vendor/src/index.ts"],
       "@nocode/widgets": ["libs/widgets/src/index.ts"]
     }
   },
