--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^12.2.0",
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
+    "@angular/fire": "7.0.4",
     "@angular/forms": "^12.2.0",
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
@@ -34,11 +35,14 @@
     "@ngneat/tailwind": "7.0.3",
     "@nrwl/angular": "12.9.0",
     "akita-ng-fire": "^3.1.6",
+    "firebase": "^9.1.3",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
@@ -67,9 +71,15 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "firebase-tools": "^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
+    "jsonc-parser": "^3.0.0",
     "ng-packagr": "^12.1.1",
+    "open": "^7.0.3",
     "prettier": "^2.3.1",
     "tailwindcss": "2.2.16",
     "ts-jest": "27.0.3",
