--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nrwl/angular": "12.9.0",
     "akita-ng-fire": "^3.1.6",
     "firebase": "^9.1.3",
+    "lodash": "^4.17.21",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -65,6 +66,7 @@
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
     "@types/jest": "26.0.24",
+    "@types/lodash": "^4.14.176",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
