--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@datorama/akita-ng-entity-service": "^6.0.0",
     "@datorama/akita-ng-router-store": "^6.0.0",
     "@ngneat/dialog": "1.6.0",
+    "@ngneat/reactive-forms": "^3.1.3",
     "@ngneat/svg-generator": "^3.2.1",
     "@ngneat/svg-icon": "^3.2.0",
     "@ngneat/tailwind": "7.0.3",
