--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@datorama/akita-ng-router-store": "^6.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.0.0",
     "@ngneat/dialog": "1.6.0",
     "@ngneat/reactive-forms": "^3.1.3",
@@ -42,6 +44,9 @@
     "akita-ng-fire": "^3.1.6",
     "firebase": "^9.1.3",
     "lodash": "^4.17.21",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
@@ -77,6 +82,8 @@
     "@types/jest": "27.0.2",
     "@types/lodash": "^4.14.176",
     "@types/node": "14.14.33",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "cypress": "^8.3.0",
