--- a/package.json
+++ b/package.json
@@ -99,6 +99,10 @@
     "jsonc-parser": "^3.0.0",
     "ng-packagr": "12.2.5",
     "open": "^7.0.3",
+    "postcss": "^8.3.9",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.3.1",
     "tailwindcss": "2.2.16",
     "ts-jest": "27.0.5",
