--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ngneat/tailwind": "7.0.3",
     "@nrwl/angular": "13.1.3",
     "akita-ng-fire": "^3.1.6",
+    "amazon-cognito-identity-js": "^5.2.2",
     "firebase": "^9.1.3",
     "lodash": "^4.17.21",
     "passport": "^0.5.0",
